# Hangman

./: .env.example  .gitignore  LETTA_SERVER_SETUP.md  README.md  TODO.md  TODOv2.md  agent.ipynb  agent.py  config.yaml  games_run.yaml  hangman_results.csv  hangman_run  prompts.py  pyproject.toml  re_evaluate.py  requirements.txt  run  run_distill_r1_llama_vllm_native_server.sh  run_experiment.py  run_qwen_openai_server.sh  run_qwen_vllm_native_server.sh  run_qwen_vllm_native_server_multigpu.sh  run_qwen_vllm_native_server_singlegpu.sh  run_sct_ds.py  run_sct_hangman.py  setup.py  start_letta_server.sh  try.ipynb
config/: config.yaml  diagnosis_simulator_gptoss_run.yaml  diagnosis_simulator_qwen3_run.yaml  diagnosis_simulator_run.yaml  diagnosis_simulator_sct_gptoss_big_run.yaml  diagnosis_simulator_sct_gptoss_run.yaml  diagnosis_simulator_sct_qwen3_big_run.yaml  diagnosis_simulator_sct_qwen3_run.yaml  games_run.yaml  hangman_gptoss_run.yaml  hangman_gptossbig_run.yaml  hangman_qwen3_run.yaml  hangman_run.yaml  hangman_sct_gptoss_big_run.yaml  hangman_sct_gptoss_run.yaml  hangman_sct_qwen3_big_run.yaml  hangman_sct_qwen3_run.yaml  letta_config_gptoss_120b.yaml  letta_config_gptoss_20b.yaml  letta_config_qwen3_235b.yaml  letta_config_qwen3_32b.yaml  lightmem_config_gptoss_120b.yaml  lightmem_config_gptoss_20b.yaml  lightmem_config_qwen3_235b.yaml  lightmem_config_qwen3_32b.yaml  mem0_config_gptoss_120b.yaml  mem0_config_gptoss_20b.yaml  mem0_config_qwen3_235b.yaml  mem0_config_qwen3_32b.yaml  memoryos_config_gptoss_120b.yaml  memoryos_config_gptoss_20b.yaml  memoryos_config_qwen3_235b.yaml  memoryos_config_qwen3_32b.yaml  re_evaluate.yaml  test.yaml  test_multigpu.yaml  test_tracker_integration.yaml  twenty_questions_gptoss_run.yaml  twenty_questions_gptossbig_run.yaml  twenty_questions_qwen3_235b_run.yaml  (+3 more)
(+189 files in other folders)
